update: Statistical Rethinking chapter 9

--- a/My Library.bib
+++ b/My Library.bib
@@ -1178,6 +1178,13 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\WIT587BG\\Chan and Moore - 2002 - Whole-Tree Methods for Detecting Differential Dive.pdf;C\:\\Users\\ericr\\Zotero\\storage\\C2B9YEHX\\1651749.html}
 }
 
+@article{chapmanr.e.SexualSelectionDinosaurs,
+  title = {Sexual {{Selection}} in {{Dinosaurs}}},
+  author = {Chapman, R. E.},
+  keywords = {!!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\YMD5UDBG\\PAL_E3969.pdf}
+}
+
 @article{christiansenMassPredictionTheropod2004,
   title = {Mass {{Prediction}} in {{Theropod Dinosaurs}}},
   author = {Christiansen, P. and Fariña †, R.A.},
@@ -1900,7 +1907,8 @@
   url = {https://doi.org/10.1146/annurev-earth-060313-054858},
   urldate = {2023-05-25},
   abstract = {Despite nearly two centuries of investigation, a comprehensive understanding of dinosaur biology has proven intractable. The recent development of means to study tissue-level growth, age these animals, and make growth curves has revolutionized our knowledge of dinosaur lives. From such data it is now understood that dinosaurs grew both disruptively and determinately; that they rarely if ever exceeded a century in age; that they became giants through accelerated growth and dwarfed through truncated development; that they were likely endothermic, sexually matured like crocodiles, and showed survivorship like populations of large mammals; and that basal birds retained dinosaurian physiology.},
-  keywords = {!!!,birds,evolution,growth curves,histology,physiology,to-read}
+  keywords = {!!!,birds,evolution,growth curves,histology,physiology,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\793I6CZM\\Erickson - 2014 - On Dinosaur Growth.pdf}
 }
 
 @article{ericksonDinosaurianGrowthPatterns2001,
@@ -1961,7 +1969,7 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\N45KQT63\\Erickson and Brochu - 1999 - How the ‘terror crocodile’ grew so big.pdf;C\:\\Users\\ericr\\Zotero\\storage\\A2K44GLL\\18343.html}
 }
 
-@article{ericksonLifeTablePsittacosaurus2009,
+@article{ericksonLifeTablePsittacosaurus2009a,
   title = {A {{Life Table}} for {{Psittacosaurus}} Lujiatunensis: {{Initial Insights Into Ornithischian Dinosaur Population Biology}}},
   shorttitle = {A {{Life Table}} for {{Psittacosaurus}} Lujiatunensis},
   author = {Erickson, Gregory M. and Makovicky, Peter J. and Inouye, Brian D. and Zhou, Chang-Fu and Gao, Ke-Qin},
@@ -1973,11 +1981,11 @@
   issn = {1932-8494},
   doi = {10.1002/ar.20992},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ar.20992},
-  urldate = {2022-11-16},
+  urldate = {2023-07-27},
   abstract = {Very little is known about nonavian dinosaur population biology. Multi-individual sampling and longevity estimation using growth line counts can be used to construct life tables—the foundation for population analyses in ecology. Here we have determined the size and age distribution for a sample consisting of 80 individuals of the small ornithischian, Psittacosaurus lujiatunensis from the early Cretaceous Yixian Formation of China. Their ages ranged from less than a year to eleven years and the distribution was strongly right-skewed. This is consistent with taphonomic interpretations that these animals derive from a catastrophic death assemblage. The static life table analysis revealed the same general pattern of survivorship as tyrannosaurs including increased attrition before the attainment of full adult size. This may reflect increased physiological demands and/or predation exposure associated with reproduction. Collectively these findings suggest that most nonavian dinosaurs may have had a similar life history strategy. Anat Rec, 292:1514–1521, 2009. © 2009 Wiley-Liss, Inc.},
   langid = {english},
   keywords = {!!,growth curve,growth rates,life history,reproduction,survivorship,to-read},
-  file = {C\:\\Users\\ericr\\Zotero\\storage\\KP8JS8YM\\Erickson et al. - 2009 - A Life Table for Psittacosaurus lujiatunensis Ini.pdf;C\:\\Users\\ericr\\Zotero\\storage\\72783ETW\\ar.html}
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\4KQQBBZ5\\Erickson et al. - 2009 - A Life Table for Psittacosaurus lujiatunensis Ini.pdf;C\:\\Users\\ericr\\Zotero\\storage\\KP8JS8YM\\Erickson et al. - 2009 - A Life Table for Psittacosaurus lujiatunensis Ini.pdf;C\:\\Users\\ericr\\Zotero\\storage\\GFSG4DYL\\ar.html}
 }
 
 @article{ericksonRevisedLifeTable2010,
@@ -2737,6 +2745,26 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\MPI9TNLV\\Hone et al. - 2016 - Ontogeny and the fossil record what, if anything,.pdf}
 }
 
+@article{honeOntogenySexuallySelected2020,
+  title = {Ontogeny of a Sexually Selected Structure in an Extant Archosaur {{Gavialis}} Gangeticus ({{Pseudosuchia}}: {{Crocodylia}}) with Implications for Sexual Dimorphism in Dinosaurs},
+  shorttitle = {Ontogeny of a Sexually Selected Structure in an Extant Archosaur {{Gavialis}} Gangeticus ({{Pseudosuchia}}},
+  author = {Hone, David and Mallon, Jordan C. and Hennessey, Patrick and Witmer, Lawrence M.},
+  date = {2020-05-12},
+  journaltitle = {PeerJ},
+  shortjournal = {PeerJ},
+  volume = {8},
+  pages = {e9134},
+  publisher = {{PeerJ Inc.}},
+  issn = {2167-8359},
+  doi = {10.7717/peerj.9134},
+  url = {https://peerj.com/articles/9134},
+  urldate = {2023-07-27},
+  abstract = {Despite strong evidence for sexual selection in various display traits and other exaggerated structures in large extinct reptiles, such as dinosaurs, detecting sexual dimorphism in them remains difficult. Their relatively small sample sizes, long growth periods, and difficulties distinguishing the sexes of fossil specimens mean that there are little compelling data on dimorphism in these animals. The extant gharial (Gavialis gangeticus) is a large and endangered crocodylian that is sexually dimorphic in size, but males also possesses a sexually selected structure, the ghara, which has an osteological correlate in the presence of a fossa associated with the nares. This makes the species a unique model for potentially assessing dimorphism in fossil lineages, such as dinosaurs and pterosaurs, because it is a large, slow-growing, egg-laying archosaur. Here we assess the dimorphism of G. gangeticus across 106 specimens and show that the presence of a narial fossa diagnoses adult male gharials. Males are larger than females, but the level of size dimorphism, and that of other cranial features, is low and difficult to detect without a priori knowledge of the sexes, even with this large dataset. By extension, dimorphism in extinct reptiles is very difficult to detect in the absence of sex specific characters, such as the narial fossa.},
+  langid = {english},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\PQULZ5HC\\Hone et al. - 2020 - Ontogeny of a sexually selected structure in an ex.pdf}
+}
+
 @article{honeProtractedGrowthImpedes2017,
   title = {Protracted Growth Impedes the Detection of Sexual Dimorphism in Non-Avian Dinosaurs},
   author = {Hone, David W. E. and Mallon, Jordan C.},
@@ -2973,6 +3001,25 @@
   langid = {english},
   keywords = {To Read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\KHS5TBKD\\CB4E6A437F5326E169B01089716F2DB6.html}
+}
+
+@article{jiangEmergenceEcologicalTransition2023,
+  title = {Emergence and Ecological Transition of the {{Mesozoic}} Marine Reptiles: {{Evidence}} from the {{Early Triassic Chaohu}} and the {{Middle Triassic Xingyi Faunas}}},
+  shorttitle = {Emergence and Ecological Transition of the {{Mesozoic}} Marine Reptiles},
+  author = {Jiang, Da-yong and Zhou, Min and Motani, Ryosuke and Tintori, Andrea and Fraser, Nicholas C. and Huang, Jian-dong and Rieppel, Olivier and Ji, Cheng and Fu, Wan-lu and Sun, Zuo-yu and Lu, Hao},
+  date = {2023-10-15},
+  journaltitle = {Palaeogeography, Palaeoclimatology, Palaeoecology},
+  shortjournal = {Palaeogeography, Palaeoclimatology, Palaeoecology},
+  volume = {628},
+  pages = {111750},
+  issn = {0031-0182},
+  doi = {10.1016/j.palaeo.2023.111750},
+  url = {https://www.sciencedirect.com/science/article/pii/S0031018223003681},
+  urldate = {2023-08-09},
+  abstract = {Two major evolutionary events in the early history of Mesozoic marine reptiles have been recorded in the Triassic of China. The first event evidenced by the Early Triassic Chaohu Fauna was the emergence of new marine communities and their subsequent radiation in the Spathian Subage of the late Olenekian (Early Triassic). The earliest marine reptile fossil horizon was found to be 248.81~Ma in age, therefore about 3.35 myr after the end-Permian mass extinction. The emergence time for the clade Ichthyosauromorpha has been suggested to be between 251.5 and 248.8~Ma. Moreover, the first occurrence of this clade is not thought to have been prior to the end-Permian mass extinction and this is therefore indicative of an exceptionally high evolutionary rate. Globally, twenty eight marine reptile species (six from Chaohu) have been recorded in an interval of just 2 myr in the Early Triassic, and these marine reptiles diversified and became the predators in the Mesozoic marine ecosystems that formed soon after the end-Permian mass extinction. The first event was followed by a transition from coastal to oceanic communities followed by selective disappearance of coastal species and emergence of oceanic species in the Ladinian of the Middle Triassic, as evidenced by the Xingyi Fauna. Here a 5.1~m thick fossiliferous unit yields 17 or more taxa of marine reptiles and can be subdivided into two separate assemblages. The lower assemblage is mainly composed of nearshore sauropterygians, close to that of the Anisian Panxian Fauna and with a strong palaeobiogeographic affinity to western Tethys. In the upper assemblage, the coastal pachypleurosaurian and nothosaurian sauropterygians disappear, to be replaced by the large ichthyosaurs and pistosaurs with a closer palaeobiogeographic affinity to Panthalassa. In this assemblage, there is an example of an ichthyosaur unequivocally feeding on another marine reptile. This is the oldest definitive record of a marine reptile acting as an apex predator. The transition from the lower assemblage to the upper one also records a turnover of Mesozoic marine reptiles from coastal to oceanic forms, and from a strong west Tethyan affinity to an assemblage showing a greater affinity with east Panthalassa by the late Middle Triassic.},
+  langid = {english},
+  keywords = {!!,Early Triassic,Ecological transition,Emergence,Mesozoic marine reptiles,Middle Triassic,South China,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\G5KG33HL\\S0031018223003681.html}
 }
 
 @article{jonesPalaeoverseCommunitydrivenPackage,
@@ -3375,7 +3422,8 @@
   url = {https://doi.org/10.7554/eLife.89158},
   urldate = {2023-06-20},
   abstract = {Studying fossils from a mass-mortality event reveals evidence for sexual dimorphism and, unusually, equal numbers of males and females in a herd of dinosaurs.},
-  keywords = {!!!,3D geometric morphometrics,dinosaurs,intraspecific variability,limb bones,palaeontology,sexual dimorphism,to-read}
+  keywords = {!!!,3D geometric morphometrics,dinosaurs,intraspecific variability,limb bones,palaeontology,sexual dimorphism,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\GKRXL8UC\\Ludwig et al. - 2023 - Sexual dimorphism in dinosaurs.pdf;C\:\\Users\\ericr\\Zotero\\storage\\KJKFBGGY\\_.pdf}
 }
 
 @book{lymanVertebrateTaphonomy1994,
@@ -3467,6 +3515,14 @@
   keywords = {!,Embryogenesis,palaeo after dark,Palaeontology,to-read}
 }
 
+@thesis{markstromTHERMOREGULATIONLATECRETACEOUS,
+  title = {{{THERMOREGULATION IN LATE CRETACEOUS MARINE REPTILES OF MANITOBA}}},
+  author = {Markstrom, Victoria},
+  langid = {english},
+  keywords = {!!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\H8BP79Z4\\Markstrom - THERMOREGULATION IN LATE CRETACEOUS MARINE REPTILE.pdf}
+}
+
 @article{marshallAbsoluteAbundancePreservation2021,
   title = {Absolute Abundance and Preservation Rate of {{Tyrannosaurus}} Rex},
   author = {Marshall, Charles R. and Latorre, Daniel V. and Wilson, Connor J. and Frank, Tanner M. and Magoulick, Katherine M. and Zimmt, Joshua B. and Poust, Ashley W.},
@@ -3518,6 +3574,22 @@
   langid = {english},
   keywords = {Biodiversity,extinction rates,Meade Basin,New Mexico,rodent,To Read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\IUCWIUB7\\Martin and Peláez-Campomanes - 2017 - Extinction rates of the Meade Basin rodents appli.pdf;C\:\\Users\\ericr\\Zotero\\storage\\Z4V65GMD\\let.html}
+}
+
+@article{mayoPaleoenvironmentalReconstructionLate2023,
+  title = {Paleoenvironmental Reconstruction of Late Cretaceous Rivers, {{Dinosaur Park Formation}}, {{Alberta}}, {{Canada}}},
+  author = {Mayo, Katrina and Silva, Ricardo L. and Durkin, Paul R.},
+  date = {2023-09-09},
+  journaltitle = {Sedimentary Geology},
+  shortjournal = {Sedimentary Geology},
+  pages = {106499},
+  issn = {0037-0738},
+  doi = {10.1016/j.sedgeo.2023.106499},
+  url = {https://www.sciencedirect.com/science/article/pii/S0037073823001719},
+  urldate = {2023-09-13},
+  abstract = {Dinosaur Provincial Park is a UNESCO World Heritage Site with one of the richest vertebrate fossil accumulations globally. The “badlands”-style topography exposes Upper Cretaceous (Campanian) meander-belt deposits of the Dinosaur Park Formation, providing an excellent opportunity for sedimentological and three-dimensional stratigraphic analysis. One of the main unknowns regarding the depositional environments of the Dinosaur Park Formation, specifically the proximity to the fluvial-to-marine transition zone, has been the subject of extensive debate. Our study aims to refine paleoenvironmental reconstructions of Late Cretaceous rivers through facies and facies associations analysis, meander-belt architecture characterization, and paleohydraulic parameter calculations. We investigate a\,\textasciitilde\,7\,m thick single-story meander-belt interval of the Dinosaur Park Formation. Six facies, four facies associations, and two architectural elements (both point bars) were identified from 20 stratigraphic sections. In addition, paleohydraulic reconstruction of the formative river channel was completed by estimating bankfull channel depth and width, paleoslope, and backwater length. Contrasting with previous interpretations of deposition (partially or wholly) influenced by tides, these data allow us to demonstrate that the meander-belt deposits of the Dinosaur Park Formation were deposited in a fluvial environment upstream of the fluvial-marine transition zone. Inclined heterolithic strata (IHS) present in the area are of fluvial origin, adding to the growing body of evidence for heterolithic bedding in fluvial point-bar environments. The newly inferred depositional setting for the studied portion of the Dinosaur Park Formation changes our understanding of the paleogeography of the Western Interior Seaway in western Canada and will allow paleontologists to revise the reconstructions of dinosaur habitats and better constrain the taphonomy of these globally significant fossil accumulations. Additionally, this study contributes to the validation and development of a systematic approach to the paleoenvironmental reconstruction of ancient river systems based on paleohydraulic analysis.},
+  keywords = {!!,Fluvial,Paleoenvironment,Paleogeography,Paleohydraulics,Sedimentology,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\C69VSPV5\\S0037073823001719.html}
 }
 
 @article{mccormackTrophicPositionOtodus2022,
@@ -3751,6 +3823,24 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\NQUBZM6A\\Naish and Cau - 2022 - The osteology and affinities of Eotyrannus lengi, .pdf;C\:\\Users\\ericr\\Zotero\\storage\\K89QRGA3\\12727.html}
 }
 
+@article{nangluSpaceTimeReview2023,
+  title = {Across Space and Time: {{A}} Review of Sampling, Preservational, Analytical, and Anthropogenic Biases in Fossil Data across Macroecological Scales},
+  shorttitle = {Across Space and Time},
+  author = {Nanglu, Karma and Cullen, Thomas M.},
+  date = {2023-09-01},
+  journaltitle = {Earth-Science Reviews},
+  shortjournal = {Earth-Science Reviews},
+  volume = {244},
+  pages = {104537},
+  issn = {0012-8252},
+  doi = {10.1016/j.earscirev.2023.104537},
+  url = {https://www.sciencedirect.com/science/article/pii/S001282522300226X},
+  urldate = {2023-08-15},
+  abstract = {Quantitative studies of fossil data have proven critical to a number of major macroevolutionary and macroecological discoveries, such as the ‘Big 5’ mass extinctions of the Phanerozoic. The development and easy accessibility of major meta-data sources such as the Paleobiology Database and Geobiodiversity Database have also spurred the widespread application of these data to testing ecological hypotheses at finer spatiotemporal and phylogenetic scales. However, preservational, sampling, and taxonomic issues, along with analytical decisions, can impact the degree of interpretative resolution and obscure biological ‘signal’ from error/bias-introduced ‘noise’. The degree to which these factors can impact analytical interpretations is not well-documented in comparison to the scale of their application. Here, we review many forms of systematic bias that can creep into a paleoecological study, from the stage of data collection to the interpretation of analytical results. We provide two case studies where we artificially introduce such biases to previously-published datasets to illustrate their varying impacts on otherwise well-constrained data. The first case study focuses on the Cambrian Burgess Shale (konservat lagerstätte), and the second on bonebeds of the Cretaceous Belly River Group (konzentrat laggerstätte), with both representing highly-sampled, taphonomically-characterized, and spatiotemporally-constrained datasets developed through multiple years of sustained field collecting. In the former, we illustrate the impacts of collecting bias through quantitative comparisons of collected vs. discarded specimens over multiple field seasons and the impact of the loss of these data on ecological reconstructions and analysis. In the latter case study, we review the impact of preservational biases, differing approaches to their mitigation, and the impact of analytical decisions on ecological resolution. Lastly, we synthesize these case studies with our review of past approaches to propose a series of recommendations for future paleoecological and macroecological studies, emphasizing the continued importance of high-quality primary data and ongoing need for a first-principles approach to address existing issues of missing data.},
+  keywords = {!!,Cambrian,Cretaceous,Macroecology,Meta-analyses,Paleoecology,Sampling bias,Taphonomy,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\QT42ZJHC\\S001282522300226X.html}
+}
+
 @article{nawrotStratigraphicSignaturesMass2018,
   title = {Stratigraphic Signatures of Mass Extinctions: Ecological and Sedimentary Determinants},
   shorttitle = {Stratigraphic Signatures of Mass Extinctions},
@@ -3850,6 +3940,25 @@
   keywords = {To Read}
 }
 
+@article{obrienEvolutionExtremeStructures2018,
+  title = {On the Evolution of Extreme Structures: Static Scaling and the Function of Sexually Selected Signals},
+  shorttitle = {On the Evolution of Extreme Structures},
+  author = {O'Brien, Devin M. and Allen, Cerisse E. and Van Kleeck, Melissa J. and Hone, David and Knell, Robert and Knapp, Andrew and Christiansen, Stuart and Emlen, Douglas J.},
+  date = {2018-10-01},
+  journaltitle = {Animal Behaviour},
+  shortjournal = {Animal Behaviour},
+  volume = {144},
+  pages = {95--108},
+  issn = {0003-3472},
+  doi = {10.1016/j.anbehav.2018.08.005},
+  url = {https://www.sciencedirect.com/science/article/pii/S0003347218302483},
+  urldate = {2023-07-27},
+  abstract = {The ‘positive allometry hypothesis’ predicts that ornaments and weapons of sexual selection will scale steeply when among-individual variation in trait size is compared with variation in overall body size. Intuitive and striking, this idea has been explored in hundreds of contemporary animal species and sparked controversy in palaeobiology over the function of exaggerated structures in dinosaurs and other extinct lineages. Recently, however, challenges to this idea have raised questions regarding the validity of the hypothesis. We address this controversy in two ways. First, we suggest the positive allometry hypothesis be applied only to morphological traits that function as visual signals of individual body size. Second, because steep scaling slopes make traits better signals than other body parts, we propose that tests of the positive allometry hypothesis compare the steepness of the scaling relationships of focal, putative signal traits to those of other body parts in the same organism (rather than to an arbitrary slope of 1). We provide data for a suite of 29 extreme structures and show that steep scaling relationships are common when structures function as signals of relative body size, but not for comparably extreme structures that function in other contexts. We discuss these results in the context of animal signalling and sexual selection, and conclude that patterns of static scaling offer powerful insight into the evolution and function of disproportionately large, or extreme, animal structures. Finally, using data from a ceratopsid dinosaur and a pterosaur, we show that our revised test can be applied to fossil assemblages, making this an exciting and powerful method for gleaning insight into the function of structures in extinct taxa.},
+  langid = {english},
+  keywords = {animal signal,fossil,scaling,sexual selection},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\UITEQHP8\\O'Brien et al. - 2018 - On the evolution of extreme structures static sca.pdf;C\:\\Users\\ericr\\Zotero\\storage\\IAZHGQCT\\S0003347218302483.html}
+}
+
 @article{ogormanBodySizeDistribution2012,
   title = {Body {{Size Distribution}} of the {{Dinosaurs}}},
   author = {O’Gorman, Eoin J. and Hone, David W. E.},
@@ -3883,6 +3992,16 @@
   keywords = {To Read},
   annotation = {Accepted: 2005-10-06T15:19:49Z},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\TEJMTFZN\\Osborn et al. - 1905 - Tyrannosaurus and other Cretaceous carnivorous din.pdf;C\:\\Users\\ericr\\Zotero\\storage\\JEHCLFVX\\1464.html}
+}
+
+@online{OsteohistologicalReconstructionBody,
+  title = {Osteohistological {{Reconstruction}} of {{Body Mass Growth Curves}} in {{Extant}} and {{Extinct Tetrapods}} - {{ProQuest}}},
+  url = {https://www.proquest.com/openview/a7679f609eb07c583fdd918052e72409/1?pq-origsite=gscholar&cbl=18750},
+  urldate = {2023-07-27},
+  abstract = {Explore millions of resources from scholarly journals, books, newspapers, videos and more, on the ProQuest Platform.},
+  langid = {english},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\EWBLL8LL\\Osteohistological Reconstruction of Body Mass Grow.pdf;C\:\\Users\\ericr\\Zotero\\storage\\NJGW66J4\\1.html}
 }
 
 @online{OsteohistologyTriassicDinosaur,
@@ -4069,6 +4188,24 @@
   url = {https://www.journals.uchicago.edu/doi/abs/10.1086/394476},
   urldate = {2023-02-07},
   keywords = {to-read}
+}
+
+@article{personsivOlderExceptionallyLarge2020,
+  title = {An {{Older}} and {{Exceptionally Large Adult Specimen}} of {{Tyrannosaurus}} Rex},
+  author = {Persons IV, W. Scott and Currie, Philip J. and Erickson, Gregory M.},
+  date = {2020},
+  journaltitle = {The Anatomical Record},
+  volume = {303},
+  number = {4},
+  pages = {656--672},
+  issn = {1932-8494},
+  doi = {10.1002/ar.24118},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ar.24118},
+  urldate = {2023-07-27},
+  abstract = {Here we describe an extremely large and relatively complete (roughly 65\%) skeleton of Tyrannosaurus rex (RSM P2523.8). Multiple measurements (including those of the skull, hip, and limbs) show that RSM P2523.8 was a robust individual with an estimated body mass exceeding all other known T. rex specimens and representatives of all other gigantic terrestrial theropods. Histological sampling of the fibula confirms that RSM P2523.8 is skeletally mature. The prevalence of incompletely coossified elements contradicts previous assertions that such unfused elements can be taken as indicators of somatic immaturity. As an extreme example of both ontogenetic maturity and osteological robustness, RSM P2523.8 offers support for prior hypotheses that a sampling bias occurs throughout the Dinosauria, making it likely that most taxa grew to significantly greater size than current known specimens indicate. Anat Rec, 303:656–672, 2020. © 2019 Wiley Periodicals, Inc.},
+  langid = {english},
+  keywords = {!!,dinosaurs,giantism,theropods,to-read,tyrannosauroids},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\MB3M5KSN\\Persons IV et al. - 2020 - An Older and Exceptionally Large Adult Specimen of.pdf;C\:\\Users\\ericr\\Zotero\\storage\\8UKD3V47\\ar.html}
 }
 
 @article{petersLifeHistorySexual2009,
@@ -4405,6 +4542,22 @@
   keywords = {Humanities and Social Sciences,multidisciplinary,Science,to-read}
 }
 
+@article{rogersJudithRiverBelly2023,
+  title = {The “{{Judith River}}−{{Belly River}} Problem” Revisited ({{Montana-Alberta-Saskatchewan}}): {{New}} Perspectives on the Correlation of {{Campanian}} Dinosaur-Bearing Strata Based on a Revised Stratigraphic Model Updated with {{CA-ID-TIMS U-Pb}} Geochronology},
+  shorttitle = {The “{{Judith River}}−{{Belly River}} Problem” Revisited ({{Montana-Alberta-Saskatchewan}})},
+  author = {Rogers, Raymond R. and Eberth, David A. and Ramezani, Jahandar},
+  date = {2023-07-28},
+  journaltitle = {GSA Bulletin},
+  shortjournal = {GSA Bulletin},
+  issn = {0016-7606},
+  doi = {10.1130/B36999.1},
+  url = {https://doi.org/10.1130/B36999.1},
+  urldate = {2023-08-09},
+  abstract = {Terrestrial strata of the Judith River−Belly River wedge, widely exposed in the plains of north-central Montana, southern Alberta, and southwestern Saskatchewan, were pivotal in early stratigraphic investigations of the Western Interior of North America and are renowned to this day for their spectacular preservation of Late Cretaceous fossils, most notably dinosaurs. Correlation of the Judith River Formation in Montana with the Foremost, Oldman, and Dinosaur Park Formations (= Belly River Group) in Canada has been challenging for a variety of reasons, including lithostratigraphic complexities, legacy bentonite ages of limited comparability, and distinctly different stratigraphic models on opposite sides of the international border. An updated model calibrated with U-Pb zircon ages provides an improved framework for stratigraphic analysis. New geochronology indicates that the Oldman−Dinosaur Park discontinuity in Dinosaur Provincial Park correlates in age with the mid-Judith discontinuity in the Judith River Formation in Montana, which is interpreted as an expansion surface linked to a major pulse of accommodation and onset of the Bearpaw transgression at ca. 76.3 Ma. The regionally expressed shift in alluvial facies marking the mid-Judith discontinuity can be traced in well logs from Montana to southern Canada, where it loses distinction and transitions to a subsurface signature typical of the Oldman−Dinosaur Park discontinuity, which in turn can be traced north to Dinosaur Provincial Park and beyond. Across this expanse, both discontinuities parallel the Eagle/Milk River shoulder at approximately the same stratigraphic height, confirming their chronostratigraphic significance. These findings have clear implications for regional correlation and the evolution of alluvial depositional systems in a foreland basin setting, and they afford an opportunity to evaluate existing interpretations and advance understanding of the stratigraphy and paleontology of the Judith River−Belly River wedge. The term “Judith River−Belly River discontinuity” should be used henceforth to refer to the chronostratigraphically significant stratal discontinuity that subdivides the Judith River−Belly River wedge throughout the plains of north-central Montana, southern Alberta, and southwestern Saskatchewan.},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\FVNSIL3R\\The-Judith-River-Belly-River-problem-revisited.html}
+}
+
 @online{RoleDecayMineralization,
   title = {The Role of Decay and Mineralization in the Preservation of Soft-Bodied Fossils - {{ProQuest}}},
   url = {https://www.proquest.com/openview/b9c933313ac7d32a56cce495a89812c2/1?pq-origsite=gscholar&cbl=35031},
@@ -4433,6 +4586,24 @@
   langid = {english},
   keywords = {!!!,Pure mathematics,to-read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\44MIMJG7\\2011 - The unplanned impact of mathematics.pdf}
+}
+
+@article{saittaEffectSizeStatistical2020,
+  title = {An Effect Size Statistical Framework for Investigating Sexual Dimorphism in Non-Avian Dinosaurs and Other Extinct Taxa},
+  author = {Saitta, Evan T and Stockdale, Maximilian T and Longrich, Nicholas R and Bonhomme, Vincent and Benton, Michael J and Cuthill, Innes C and Makovicky, Peter J},
+  date = {2020-09-22},
+  journaltitle = {Biological Journal of the Linnean Society},
+  shortjournal = {Biological Journal of the Linnean Society},
+  volume = {131},
+  number = {2},
+  pages = {231--273},
+  issn = {0024-4066},
+  doi = {10.1093/biolinnean/blaa105},
+  url = {https://doi.org/10.1093/biolinnean/blaa105},
+  urldate = {2023-07-27},
+  abstract = {Despite reports of sexual dimorphism in extinct taxa, such claims in non-avian dinosaurs have been rare over the last decade and have often been criticized. Since dimorphism is widespread in sexually reproducing organisms today, under-reporting in the literature might suggest either methodological shortcomings or that this diverse group exhibited highly unusual reproductive biology. Univariate significance testing, especially for bimodality, is ineffective and prone to false negatives. Species recognition and mutual sexual selection hypotheses, therefore, may not be required to explain supposed absence of sexual dimorphism across the grade (a type II error). Instead, multiple lines of evidence support sexual selection and variation of structures consistent with secondary sexual characteristics, strongly suggesting sexual dimorphism in non-avian dinosaurs. We propose a framework for studying sexual dimorphism in fossils, focusing on likely secondary sexual traits and testing against all alternate hypotheses for variation in them using multiple lines of evidence. We use effect size statistics appropriate for low sample sizes, rather than significance testing, to analyse potential divergence of growth curves in traits and constrain estimates for dimorphism magnitude. In many cases, estimates of sexual variation can be reasonably accurate, and further developments in methods to improve sex assignments and account for intrasexual variation (e.g. mixture modelling) will improve accuracy. It is better to compare estimates for the magnitude of and support for dimorphism between datasets than to dichotomously reject or fail to reject monomorphism in a single species, enabling the study of sexual selection across phylogenies and time. We defend our approach with simulated and empirical data, including dinosaur data, showing that even simple approaches can yield fairly accurate estimates of sexual variation in many cases, allowing for comparison of species with high and low support for sexual variation.},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\F7MNWUYY\\Saitta et al. - 2020 - An effect size statistical framework for investiga.pdf;C\:\\Users\\ericr\\Zotero\\storage\\M5JITFQR\\5897459.html}
 }
 
 @article{salvatierProbabilisticProgrammingPython2016,
@@ -4563,12 +4734,6 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\JH8VG69U\\Sereno and Brusatte - 2009 - Comparative Assessment of tyrannosaurid interrelat.pdf}
 }
 
-@article{SexualDimorphismDinosaurs,
-  title = {Sexual {{Dimorphism}} in {{Dinosaurs}}},
-  keywords = {!!!,to-read},
-  file = {C\:\\Users\\ericr\\Zotero\\storage\\KJKFBGGY\\_.pdf}
-}
-
 @article{shimadaBodyJawDentition2021,
   title = {Body, Jaw, and Dentition Lengths of Macrophagous Lamniform Sharks, and Body Size Evolution in {{Lamniformes}} with Special Reference to ‘off-the-Scale’ Gigantism of the Megatooth Shark, {{Otodus}} Megalodon},
   author = {Shimada, Kenshu and Becker, Martin A. and Griffiths, Michael L.},
@@ -4601,6 +4766,23 @@
   urldate = {2023-06-05},
   abstract = {The assumption that activity and foraging are risky for prey underlies many predator–prey theories and has led to the use of predator–prey activity overlap as a proxy of predation risk. However, the simultaneous measures of prey and predator activity along with timing of predation required to test this assumption have not been available. Here, we used accelerometry data on snowshoe hares (Lepus americanus) and Canada lynx (Lynx canadensis) to determine activity patterns of prey and predators and match these to precise timing of predation. Surprisingly we found that lynx kills of hares were as likely to occur during the day when hares were inactive as at night when hares were active. We also found that activity rates of hares were not related to the chance of predation at daily and weekly scales, whereas lynx activity rates positively affected the diel pattern of lynx predation on hares and their weekly kill rates of hares. Our findings suggest that predator–prey diel activity overlap may not always be a good proxy of predation risk, and highlight a need for examining the link between predation and spatio-temporal behaviour of predator and prey to improve our understanding of how predator–prey behavioural interactions drive predation risk.},
   keywords = {!!,diel activity,Lepus americanus,Lynx canadensis,predation risk,predator–prey,time of predation,to-read}
+}
+
+@article{shukerDefinitionSexualSelection2021,
+  title = {The Definition of Sexual Selection},
+  author = {Shuker, David M and Kvarnemo, Charlotta},
+  date = {2021-09-01},
+  journaltitle = {Behavioral Ecology},
+  shortjournal = {Behavioral Ecology},
+  volume = {32},
+  number = {5},
+  pages = {781--794},
+  issn = {1045-2249},
+  doi = {10.1093/beheco/arab055},
+  url = {https://doi.org/10.1093/beheco/arab055},
+  urldate = {2023-07-27},
+  abstract = {Sexual selection is a key component of evolutionary biology. However, from the very formulation of sexual selection by Darwin, the nature and extent of sexual selection have been controversial. Recently, such controversy has led back to the fundamental question of just what sexual selection is. This has included how we incorporate female-female reproductive competition into sexual or natural selection. In this review, we do four things. First, we examine what we want a definition to do. Second, we define sexual selection: sexual selection is any selection that arises from fitness differences associated with nonrandom success in the competition for access to gametes for fertilization. An important outcome of this is that as mates often also offer access to resources, when those resources are the targets of the competition, rather than their gametes, the process should be considered natural rather than sexual selection. We believe this definition encapsulates both much of Darwin’s original thinking about sexual selection, and much of how contemporary biologists use the concept of sexual selection. Third, we address alternative definitions, focusing in some detail on the role of female reproductive competition. Fourth, we challenge our definition with a number of scenarios, for instance where natural and sexual selection may align (as in some forms of endurance rivalry), or where differential allocation means teasing apart how fecundity and access to gametes influence fitness. In conclusion, we emphasize that whilst the ecological realities of sexual selection are likely to be complex, the definition of sexual selection is rather simple.},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\QD4ZAJJ9\\Shuker and Kvarnemo - 2021 - The definition of sexual selection.pdf;C\:\\Users\\ericr\\Zotero\\storage\\3DITAD7U\\6344800.html}
 }
 
 @article{silleroCommonMistakesEcological2021,
@@ -4902,27 +5084,8 @@
   urldate = {2022-11-17},
   abstract = {We describe statistical methods to formulate and validate statements about survival rates given a small number of individuals. These methods allow one to estimate the age-specific survival rate and assess its uncertainty, to assess whether the survival rates during some age range differ from the survival rates during another age range, and to assess whether the survivorship curve has a particular shape. We illustrate these methods by applying them to a sample of 22 Albertosaurus sarcophagus individuals. We show that this sample is too small to provide any confidence in the claim that this species had a “convex” survivorship curve arising from age-specific survival rates that decreased monotonically with age. However, we show that a sample of 50 to 100 individuals has reasonable statistical power to support such a claim. There is evidence for the much weaker claim that average survival rates for ages 2 to 15 were higher than survival rates for later ages. Finally, we describe one way to account for size-dependent fossilization rates and show that a plausible positively-size-dependent fossilization rate results in a substantially non-convex survivorship curve for A. sarcophagus.},
   langid = {english},
-  keywords = {To Read},
+  keywords = {!!!,To Read,to-read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\XYWWWIVS\\Steinsaltz and Orzack - 2011 - Statistical methods for paleodemography on fossil .pdf;C\:\\Users\\ericr\\Zotero\\storage\\JQ33Q2CA\\B161FB0B45D36EF5B9153CDA0F14428F.html}
-}
-
-@article{steinsaltzStatisticalMethodsPaleodemography2011a,
-  title = {Statistical Methods for Paleodemography on Fossil Assemblages Having Small Numbers of Specimens: An Investigation of Dinosaur Survival Rates},
-  shorttitle = {Statistical Methods for Paleodemography on Fossil Assemblages Having Small Numbers of Specimens},
-  author = {Steinsaltz, David and Orzack, Steven Hecht},
-  date = {2011-02-01},
-  journaltitle = {Paleobiology},
-  shortjournal = {Paleobiology},
-  volume = {37},
-  number = {1},
-  pages = {113--125},
-  issn = {0094-8373},
-  doi = {10.1666/08056.1},
-  url = {https://doi.org/10.1666/08056.1},
-  urldate = {2023-05-25},
-  abstract = {We describe statistical methods to formulate and validate statements about survival rates given a small number of individuals. These methods allow one to estimate the age-specific survival rate and assess its uncertainty, to assess whether the survival rates during some age range differ from the survival rates during another age range, and to assess whether the survivorship curve has a particular shape. We illustrate these methods by applying them to a sample of 22 Albertosaurus sarcophagus individuals. We show that this sample is too small to provide any confidence in the claim that this species had a “convex” survivorship curve arising from age-specific survival rates that decreased monotonically with age. However, we show that a sample of 50 to 100 individuals has reasonable statistical power to support such a claim. There is evidence for the much weaker claim that average survival rates for ages 2 to 15 were higher than survival rates for later ages. Finally, we describe one way to account for size-dependent fossilization rates and show that a plausible positively-size-dependent fossilization rate results in a substantially non-convex survivorship curve for A. sarcophagus.},
-  keywords = {!!!,to-read},
-  file = {C\:\\Users\\ericr\\Zotero\\storage\\GUMRKYZ7\\Statistical-methods-for-paleodemography-on-fossil.html}
 }
 
 @article{stigallBioticImmigrationEvents2017,
